--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>3 Days Alone: Can You Handle Your Mind? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>SQX v143: The AI Strategy Builder Is Finally Here 🤖📈</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Trading on a coin flip</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -508,7 +508,7 @@
                     <div class="video-info">
                         <h3>Fears to Fathom: Woodbury Getaway</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>SQX v143: The AI Strategy Builder Is Finally Here 🤖📈</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Trading on a coin flip</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>3 Days Alone: Can You Handle Your Mind? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10441,7 +10441,7 @@
                         <div class="video-info">
                             <h3>Fears to Fathom: Woodbury Getaway</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
