--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: TikTok Couples Cringe</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>My Favourite Pizza Topping - Properoni Crumble</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - He’ll come around eventually @chrismd10 #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Arthur Does His Best Calfreezy Impression..💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Me n the bros just out here hoping for a miracle #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>UK Budget – The End of Democracy?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Ceasing to be Distracted from the Seat of Self</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Critical Part Of Algo Trading Most Traders Ignore</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>He took it well</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Write this one down</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>I’ll get the next one dw 😆</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Hope I did it right!</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Smooooooooooth</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>Skeletor loved his prom</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>I don’t know what was that guys</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>Clive is stuck in the cat flap</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -365,7 +365,7 @@
                     <div class="video-info">
                         <h3>I saw the light for a second</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>UK Budget – The End of Democracy?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>Critical Part Of Algo Trading Most Traders Ignore</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Ceasing to be Distracted from the Seat of Self</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>My Favourite Pizza Topping - Properoni Crumble</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: TikTok Couples Cringe</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - He’ll come around eventually @chrismd10 #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Arthur Does His Best Calfreezy Impression..💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Me n the bros just out here hoping for a miracle #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>He took it well</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Write this one down</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>I’ll get the next one dw 😆</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>Hope I did it right!</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10320,7 +10320,7 @@
                         <div class="video-info">
                             <h3>Smooooooooooth</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10331,7 +10331,7 @@
                         <div class="video-info">
                             <h3>Skeletor loved his prom</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10342,7 +10342,7 @@
                         <div class="video-info">
                             <h3>I don’t know what was that guys</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10353,7 +10353,7 @@
                         <div class="video-info">
                             <h3>Clive is stuck in the cat flap</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10364,7 +10364,7 @@
                         <div class="video-info">
                             <h3>I saw the light for a second</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
